Java cleanup, convert more Vector to ArrayList
Change-Id: Icb807382eaf50f515f2c9dfada0c061414baed33